--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
 
-	<title>×××，我爱你 </title>  
+	<title>憨娣娣，我爱你 </title>  
 <meta name="keywords" content="" />
 <meta name="description" content="" />
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -24,22 +24,23 @@
 				<embed height="100" width="100" src="renxi.mp3" />
 			</audio>
 			<div id="code">
-				<span class="comments">×××：</span><br />
-				<span class="space"><span class="comments">我爱你</span></span><br />
-				<span class="space"/><span class="comments">希望明天你会给我一个惊喜</span><br />
-				<span class="space"/><span class="comments">希望明天你会给我一个惊喜</span><br />
-				<span class="space"/><span class="comments">希望明天你会给我一个惊喜</span><br />
+				<span class="comments">憨娣娣：</span><br />
+				<span class="space"><span class="comments">我听说</span></span><br />
+				<span class="space"/><span class="comments">喜鹊喝多了可乐会变成乌鸦</span><br />
+				<span class="space"/><span class="comments">欢迎光临说多了会变成谢谢惠顾</span><br />
+				<span class="space"/><span class="comments">你的猫咪太爱你会变成兔子</span><br />
+				<span class="space"/><span class="comments">啊 还有 听说人会因为太害羞把想说的话藏在句首</span><br />
 			</div>
 			<div id="loveHeart">
 				<canvas id="garden"></canvas>
 				<div id="words">
 					<div id="messages">
-						×××, 这是我们认识的第
+						憨娣娣, 这是我们认识的第
 						<div id="elapseClock"></div>
 					</div>
 					<div id="loveu">
 						永远爱你！<br/>
-						<div class="signature">- 最爱你的人</div>
+						<div class="signature">傻星星- 最爱你的人</div>
 
 				</div>
 			</div>
